--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Shobhitg.com</title>
+  <title>aloukik.dev</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -60,7 +60,7 @@
 
         <!--Link to Resume-->
         <div class="center-align">
-            <a class="white waves-effect waves-light btn-large center-align" href="https://drive.google.com/file/d/1z3wpvMYZIuLA0oFC4yshsPrFNWVhA4aj/view?usp=sharing" target="_blank"><i class="fa fa-download left" style="color:#4a148c"></i><span class="purple-text text-darken-4" style="font-weight:bold;">Resume</span></a>
+            <a class="white waves-effect waves-light btn-large center-align" href="https://drive.google.com/file/d/1u8IvTQ9Kb9C6wbtVcwWzgRyJO7fP3b0F/view?usp=sharing" target="_blank"><i class="fa fa-download left" style="color:#4a148c"></i><span class="purple-text text-darken-4" style="font-weight:bold;">Resume</span></a>
         </div>
   </div>
 </div>
