--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!--Link to Resume-->
         <div class="center-align">
-            <a class="white waves-effect waves-light btn-large center-align" href="https://drive.google.com/file/d/1di9TAziDZT7bxcXQpUZw6VCCd6ejzSEc/view?usp=sharing" target="_blank"><i class="fa fa-download left" style="color:#4a148c"></i><span class="purple-text text-darken-4" style="font-weight:bold;">Resume</span></a>
+            <a class="white waves-effect waves-light btn-large center-align" href="https://drive.google.com/file/d/1CftgCZqrXPmBs1Nm_QEKMjdq550TeFTL/view" target="_blank"><i class="fa fa-download left" style="color:#4a148c"></i><span class="purple-text text-darken-4" style="font-weight:bold;">Resume</span></a>
         </div>
   </div>
 </div>
